[package]
name = "seven-families-wasm"
authors = ["Alexis (Poliorcetics) Bouget"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-iterator = "0.7.0"
getrandom = { version = "0.2.4", features = ["js"], default-features = false }
gloo-timers = "0.2.3"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
rand = { version = "0.8.4", default-features = false, features = ["getrandom"] }
serde = { version = "1.0.136", features = ["derive"] }
stylist = { version = "0.10.0", features = ["yew_use_style", "parser", "macros"], default-features = false }
wasm-bindgen = "0.2.79"
web-sys = { version = "0.3.56", features = ["HtmlAudioElement"] }
yew = "0.19.3"
yew-router = "0.16.0"

[features]
