[package]
name = "seven-families-wasm"
authors = ["Alexis (Poliorcetics) Bouget"]
version = "0.2.0"
edition = "2021"
publish = false

[dependencies]
enum-iterator = "0.7.0"
getrandom = { version = "0.2.4", features = ["js"], default-features = false }
gloo-timers = "0.2.3"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
rand = { version = "0.8.4", default-features = false, features = ["getrandom"] }
stylist = { version = "0.10.0", features = ["yew_use_style", "parser", "macros"], default-features = false }
wasm-bindgen = "0.2.79"
web-sys = { version = "0.3.56", features = ["HtmlAudioElement"] }
wee_alloc = "0.4.5"
yew = "0.19.3"

[profile.release]
opt-level = "z"
lto = "fat"
